--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				aria-expanded="false" aria-controls="navbar"><i></i></a>
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" style="background-image: url(images/pro_img.png);"></div>
+					<div class="author-img" style="background-image: url(images/pro_img.png);" alt="Dashboard UI" loading="lazy" decoding="async" width="1920" height="768"></div>
 					<h1 id="colorlib-logo"><a href="index.html">Ajith Kumar B</a></h1>
 					<span class="position">Software Developer</span>
 				</div>
