--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 				aria-expanded="false" aria-controls="navbar"><i></i></a>
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" style="background-image: url(images/pro_img.png);" alt="Dashboard UI" loading="lazy" decoding="async" width="1920" height="768"></div>
+					<div class="author-img" style="background-image: url(images/pro_img.png);" alt="Dashboard UI"
+						loading="lazy" decoding="async" width="1920" height="768"></div>
 					<h1 id="colorlib-logo"><a href="index.html">Ajith Kumar B</a></h1>
 					<span class="position">Software Developer</span>
 				</div>
@@ -156,7 +157,7 @@
 										<div
 											class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 											<div class="slider-text-inner">
-												<div class="desc" >
+												<div class="desc">
 													<h1>I am <br>a Software Developer</h1>
 												</div>
 											</div>
@@ -447,6 +448,57 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="timeline-centered">
+
+
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-5">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2>Freelance Web Development / WebService API</a> <span>08/2025 -
+														09/2025,</span></h2>
+
+												<h4>NAM InfoCom Private Limited </h4>
+												<p>
+													he project is a PHP + PostgreSQL web panel for managing FreeSWITCH
+													configurations. It supports CRUD operations for users, subscriber
+													IDs, ports, and IP settings via modal forms. All changes are stored
+													in PostgreSQL and synchronized to XML configuration files in the
+													FreeSWITCH path. A reporting module provides call detail records
+													(CDR) with filters and exports. The system ensures real-time
+													FreeSWITCH configuration updates with a simple UI.
+
+												</p>
+											</div>
+										</div>
+									</article>
+
+
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-4">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2>Freelance Web Design</a> <span>06/2025 - 07/2025,</span></h2>
+
+												<h4>Athelenia </h4>
+
+												<p><a class="btn btn-primary btn-learn"
+														href="https://www.aadukalam.in/index.html" target="_blank">View
+														<i class="icon-download4"></i></a></p>
+												<p>
+													Designed a sport club–focused platform to help athletes and
+													coaches
+													track performance, analyze training data, and identify emerging
+													talent.
+													Trusted nationwide by sports professionals for smarter progress
+													tracking and informed decision-making.
+												</p>
+											</div>
+										</div>
+									</article>
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 
@@ -506,30 +558,7 @@
 										</div>
 									</article>
 
-									<article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
-										<div class="timeline-entry-inner">
-											<div class="timeline-icon color-4">
-												<i class="icon-pen2"></i>
-											</div>
-											<div class="timeline-label">
-												<h2>Freelance Web Design</a> <span>06/2025 - 07/2025,</span></h2>
 
-												<h4>Athelenia </h4>
-
-												<p><a class="btn btn-primary btn-learn"
-														href="https://www.aadukalam.in/index.html" target="_blank">View
-														<i class="icon-download4"></i></a></p>
-												<p>
-													Designed a sport club–focused platform to help athletes and
-													coaches
-													track performance, analyze training data, and identify emerging
-													talent.
-													Trusted nationwide by sports professionals for smarter progress
-													tracking and informed decision-making.
-												</p>
-											</div>
-										</div>
-									</article>
 
 
 
