--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 												<h4>NAM InfoCom Private Limited </h4>
 												<p>
-													he project is a PHP + PostgreSQL web panel for managing FreeSWITCH
+													The project is a PHP + PostgreSQL web panel for managing FreeSWITCH
 													configurations. It supports CRUD operations for users, subscriber
 													IDs, ports, and IP settings via modal forms. All changes are stored
 													in PostgreSQL and synchronized to XML configuration files in the
