--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			</aside>
 
 			<div id="colorlib-main">
-				<section id="colorlib-hero" class="js-fullheight" data-section="home">
+				<!-- <section id="colorlib-hero" class="js-fullheight" data-section="home">
 					<div class="flexslider js-fullheight">
 						<ul class="slides">
 							<li class="hero-slide" style="background-image: url(images/bg_5.png);">
@@ -167,7 +167,7 @@
 							</li>
 						</ul>
 					</div>
-				</section>
+				</section> -->
 
 				<section class="colorlib-about" data-section="about">
 					<div class="colorlib-narrow-content">
