--- a/index.html
+++ b/index.html
@@ -483,10 +483,10 @@
 											<div class="timeline-label">
 												<h2>Freelance Web Design</a> <span>06/2025 - 07/2025,</span></h2>
 
-												<h4>Athelenia </h4>
+												<h4>Roatre </h4>
 
 												<p><a class="btn btn-primary btn-learn"
-														href="https://www.aadukalam.in/index.html" target="_blank">View
+														href="https://roatre.com/" target="_blank">View
 														<i class="icon-download4"></i></a></p>
 												<p>
 													Designed a sport club–focused platform to help athletes and
