--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 								<div class="colorlib-feature colorlib-feature-sm animate-box"
 									data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<i class="icon-globe-outline"></i>
+										<i class="icon-mail"></i>
 									</div>
 									<div class="colorlib-text">
 										<p><a href="mailto:ajithmaxwell3096@gmail.com">ajithmaxwell3096@gmail.com</a>
